--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# Build artifacts
+dist-newstyle/
+
+# Local Cabal overrides
 cabal.project.local
 cabal.project.local~
-dist-newstyle/
+
+# Ignore the entire test folder
+/test/
